--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ v2_58 = ["v2_56", "gio-sys/v2_58", "glib/v2_58"]
 dox = ["gio-sys/dox", "glib/dox"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
-futures = ["futures-core-preview", "futures-channel-preview", "futures-util-preview", "glib/futures"]
+futures = ["futures-preview", "glib/futures"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
@@ -44,9 +44,7 @@ git = "https://github.com/gtk-rs/lgpl-docs"
 libc = "0.2"
 bitflags = "1.0"
 lazy_static = "1.0"
-futures-core-preview = { version = "0.2", optional = true }
-futures-channel-preview = { version = "0.2", optional = true }
-futures-util-preview = { version = "0.2", optional = true }
+futures-preview = { version = "0.3.0-alpha", optional = true }
 fragile = "0.3"
 gio-sys = { git = "https://github.com/gtk-rs/sys" }
 glib-sys = { git = "https://github.com/gtk-rs/sys" }
