--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ autobins = false
 [dependencies]
 chrono = "0.4"
 url = "1.4"
-futures-preview = { version = "0.2", optional = true }
+futures-preview = { version = "0.3.0-alpha", optional = true}
 
 [dependencies.atk]
 git = "https://github.com/gtk-rs/atk"
@@ -25,27 +25,27 @@ git = "https://github.com/gtk-rs/glib"
 git = "https://github.com/gtk-rs/gio"
 
 [dependencies.cairo-rs]
-git = "https://github.com/gtk-rs/cairo"	
-features = ["png"]	
+git = "https://github.com/gtk-rs/cairo"
+features = ["png"]
 
-[dependencies.pango]	
-git = "https://github.com/gtk-rs/pango"	
+[dependencies.pango]
+git = "https://github.com/gtk-rs/pango"
 
-[dependencies.gdk-pixbuf]	
-git = "https://github.com/gtk-rs/gdk-pixbuf"	
+[dependencies.gdk-pixbuf]
+git = "https://github.com/gtk-rs/gdk-pixbuf"
 
-[dependencies.gdk]	
-git = "https://github.com/gtk-rs/gdk"	
+[dependencies.gdk]
+git = "https://github.com/gtk-rs/gdk"
 
-[dependencies.gtk]	
+[dependencies.gtk]
 git = "https://github.com/gtk-rs/gtk"
 
 [features]
-#default = ["gtk_3_22_30", "futures-stable", "subclassing"]
+#default = ["gtk_3_22_30", "futures", "subclassing"]
 gtk_3_18 = ["gtk/v3_18", "gdk-pixbuf/v2_32", "gdk/v3_18", "gio/v2_46", "glib/v2_46", "pango/v1_38"] #for CI tools
 gtk_3_22_30 = ["gtk_3_18", "gtk/v3_22_30", "gdk-pixbuf/v2_36", "gdk/v3_22", "gio/v2_56", "glib/v2_56", "pango/v1_42"] #for CI tools
 gtk_3_24 = ["gtk_3_22_30", "gtk/v3_24", "atk/v2_30", "gdk-pixbuf/v2_36_8", "gdk/v3_24", "gio/v2_58", "glib/v2_58"] #for CI tools
-futures-stable = ["futures-preview", "glib/futures", "gio/futures"]
+futures = ["futures-preview", "glib/futures", "gio/futures"]
 subclassing = ["glib/subclassing"]
 
 [[bin]]
@@ -83,11 +83,12 @@ name = "drag_and_drop_textview"
 
 [[bin]]
 name = "gio_futures"
-required-features = ["futures-stable"]
+required-features = ["futures"]
 
-#[[bin]]
-#name = "gio_futures_await"
-#required-features = ["futures-nightly"]
+[[bin]]
+name = "gio_futures_await"
+required-features = ["futures"]
+edition = "2018"
 
 [[bin]]
 name = "grid"
@@ -144,3 +145,6 @@ name = "treeview"
 
 [[bin]]
 name = "list_store"
+
+[patch.crates-io]
+futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs.git"}
