--- a/Gir.toml
+++ b/Gir.toml
@@ -31,6 +31,7 @@ generate = [
     "Gio.Emblem",
     "Gio.EmblemedIcon",
     "Gio.EmblemOrigin",
+    "Gio.FileCopyFlags",
     "Gio.FileCreateFlags",
     "Gio.FileIcon",
     "Gio.FileInfo",
