--- a/.travis.yml
+++ b/.travis.yml
@@ -4,54 +4,21 @@ matrix:
   include:
     - os: linux
       rust: nightly
-      env: GTK=3.14 FEATURES=
-    - os: linux
-      rust: nightly
-      env: GTK=3.24 FEATURES=v3_16
+      env: GTK=3.96 FEATURES=
     - os: linux
       rust: beta
-      env: GTK=3.14 FEATURES=
-    - os: linux
-      rust: beta
-      env: GTK=3.24 FEATURES=v3_16
+      env: GTK=3.96 FEATURES=
     - os: linux
       rust: 1.31.0
-      env: GTK=3.14 FEATURES=
-    - os: linux
-      rust: 1.31.0
-      env: GTK=3.24 FEATURES=v3_16
-    - os: osx
-      rust: nightly
-      env: GTK=3.14 FEATURES=
-    # - os: osx
-    #   rust: nightly
-    #   env: GTK=3.24 FEATURES=v3_16
-    - os: osx
-      rust: beta
-      env: GTK=3.14 FEATURES=
-    # - os: osx
-    #   rust: beta
-    #   env: GTK=3.24 FEATURES=v3_16
-    - os: osx
-      rust: stable
-      env: GTK=3.14 FEATURES=
-    # - os: osx
-    #   rust: stable
-    #   env: GTK=3.24 FEATURES=v3_16
+      env: GTK=3.96 FEATURES=
 addons:
   apt:
     packages:
     - libgtk-3-dev
     - libmount-dev
-before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gtk+3 cairo atk; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-    export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:/opt/X11/lib/pkgconfig;
-    fi
 script:
   - rustc --version
-  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.14" ]; then
+  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.96" ]; then
     make regen_check;
     fi
   - ./check_init_asserts
@@ -63,6 +30,6 @@ script:
   - rustc --version
   - mkdir .cargo
   - echo 'paths = ["."]' > .cargo/config
-  - git clone -q --depth 50 -b pending https://github.com/gtk-rs/examples _examples
+  - git clone -q --depth 50 https://github.com/sfanxiang/gtk-rs-examples4 _examples
   - cd _examples
   - ./build_travis.sh
