--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,7 @@ script:
     cargo clippy --release;
     fi
   - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.14" ] && ! [ "$ARM" == "1" ]; then
+    rustup component add rustfmt;
     make regen_check;
     fi
   - if ! [ "$ARM" == "1" ]; then
