--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
 script:
   - rustc --version
   - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.14" ]; then
+    rustup component add rustfmt;
     make regen_check;
     fi
   - mkdir .cargo
