--- a/Gir.toml
+++ b/Gir.toml
@@ -362,6 +362,14 @@ manual_traits = ["FileExtManual"]
     name = "replace_contents_async"
     # AsRef
     ignore = true
+    [[object.function]]
+    name = "get_uri_scheme"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "get_uri"
+        [object.function.return]
+        nullable = false
 
 [[object]]
 name = "Gio.FileAttributeMatcher"
