--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
 dox = ["atk-sys/dox"]
 v2_30 = ["atk-sys/v2_30"]
+v2_32 = ["v2_30", "atk-sys/v2_32"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
