--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rust:
 env:
   - GTK=3.14
   - GTK=3.24
+  - GTK=3.96
 addons:
   apt:
     packages:
@@ -20,6 +21,10 @@ script:
     fi
   - mkdir .cargo
   - echo 'paths = ["."]' > .cargo/config
-  - git clone -q --depth 50 -b pending https://github.com/gtk-rs/examples _examples
+  - if [ "$GTK" == "3.96" ]; then
+    git clone -q --depth 50 -b pending https://github.com/gtk-rs/examples4 _examples;
+    else
+    git clone -q --depth 50 -b pending https://github.com/gtk-rs/examples _examples;
+    fi
   - cd _examples
   - ./build_travis.sh
