--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ autobins = false
 chrono = "0.4"
 url = "1.4"
 futures = "0.3"
+once_cell = "1.2.0"
 
 [dependencies.atk]
 git = "https://github.com/gtk-rs/atk"
@@ -58,6 +59,9 @@ name = "accessibility"
 
 [[bin]]
 name = "basic"
+
+[[bin]]
+name = "basic_subclass"
 
 [[bin]]
 name = "builder_basics"
