--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,9 @@ script:
   - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.96" ]; then
     rustup component add rustfmt;
     make regen_check;
-    cd graphene-sys && make regen_check && cd ..;
+    cd graphene-sys;
+    make regen_check;
+    cd ..;
     fi
   - cargo doc --features "dox,embed-lgpl-docs"
   - cargo test --features "$FEATURES,embed-lgpl-docs"
