--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/gtk-rs/gir.git
 [submodule "gir-files"]
 	path = gir-files
-	url = https://github.com/sfanxiang/gtk-rs-gir-files.git
+	url = https://github.com/gtk-rs/gir-files.git
