--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,9 @@ embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
 futures = ["futures-preview", "glib/futures"]
 subclassing = ["glib/subclassing"]
 
+["package.metadata.docs.rs"]
+features = ["dox", "embed-lgpl-docs", "v2_60", "futures", "subclassing"]
+
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
 optional = true
