--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,9 @@ dox = ["gdk-sys/dox", "glib/dox", "gio/dox", "gdk-pixbuf/dox", "cairo-rs/dox", "
 purge-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/purge-lgpl-docs", "gdk-pixbuf/purge-lgpl-docs", "gio/purge-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/embed-lgpl-docs", "gdk-pixbuf/embed-lgpl-docs", "gio/embed-lgpl-docs"]
 
+["package.metadata.docs.rs"]
+features = ["dox", "embed-lgpl-docs", "v3_24"]
+
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
 optional = true
