--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ dox = ["atk-sys/dox"]
 v2_30 = ["atk-sys/v2_30"]
 v2_32 = ["v2_30", "atk-sys/v2_32"]
 
+["package.metadata.docs.rs"]
+features = ["dox", "embed-lgpl-docs", "v2_32"]
+
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
 optional = true
