--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ dox = ["pango-sys/dox", "glib/dox"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
 
+["package.metadata.docs.rs"]
+features = ["dox", "embed-lgpl-docs", "v1_42"]
+
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
 optional = true
