--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,3 +58,5 @@ gobject-sys = { git = "https://github.com/gtk-rs/sys" }
 
 [dev-dependencies]
 gir-format-check = "^0.1"
+serial_test = "0.1"
+serial_test_derive = "0.1"
