--- a/Gir.toml
+++ b/Gir.toml
@@ -38,6 +38,7 @@ generate = [
     "Gdk.Gravity",
     "Gdk.InputMode",
     "Gdk.InputSource",
+    "Gdk.Keymap",
     "Gdk.ModifierIntent",
     "Gdk.ModifierType",
     "Gdk.NotifyType",
@@ -103,6 +104,7 @@ manual = [
     "GLib.Error",
     "GObject.Value",
     "Pango.Context",
+    "Pango.Direction",
     "Pango.Layout",
     "Pango.LayoutLine",
 ]
