--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ v2_56 = ["v2_54", "glib-sys/v2_56"]
 v2_58 = ["v2_56", "glib-sys/v2_58"]
 v2_60 = ["v2_58", "glib-sys/v2_60"]
 futures = ["futures-preview"]
-dox = ["glib-sys/dox", "gobject-sys/dox"]
+dox = ["glib-sys/dox", "gobject-sys/dox", "futures"]
 
 ["package.metadata.docs.rs"]
-features = ["dox", "v2_60", "futures"]
+features = ["dox"]
