--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ v2_30 = ["atk-sys/v2_30"]
 v2_32 = ["v2_30", "atk-sys/v2_32"]
 
 ["package.metadata.docs.rs"]
-features = ["dox", "embed-lgpl-docs", "v2_32"]
+features = ["dox", "embed-lgpl-docs"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
