--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,12 @@ matrix:
       rust: beta
       env: GTK=3.24 FEATURES=v2_32
     - os: linux
+      rust: stable
+      env: GTK=3.14
+    - os: linux
+      rust: stable
+      env: GTK=3.24 FEATURES=v2_32
+    - os: linux
       rust: 1.36.0
       env: GTK=3.14
     - os: linux
@@ -52,7 +58,7 @@ before_install:
     fi
 script:
   - rustc --version
-  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.14" ]; then
+  - if [ "$TRAVIS_RUST_VERSION" == "stable" ] && [ "$GTK" == "3.14" ]; then
     rustup component add rustfmt;
     make regen_check;
     fi
