--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,10 +35,9 @@ dox = ["gio-sys/dox", "glib/dox", "futures"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
 futures = ["futures-preview", "glib/futures"]
-subclassing = ["glib/subclassing"]
 
 ["package.metadata.docs.rs"]
-features = ["dox", "embed-lgpl-docs", "v2_60", "futures", "subclassing"]
+features = ["dox", "embed-lgpl-docs"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
